# purles_email_bot

./: .gitignore  CMakeLists.txt  README.md  gmail_browser_interaction_fns.cpp  gmail_browser_interaction_fns.h  in_out_helpers.cpp  in_out_helpers.h  read  read_in_email.cpp
