cmake_minimum_required(VERSION 3.16)

project(purles_email_bot LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(CURL REQUIRED)

add_executable(read_email
    gmail_browser_interaction_fns.cpp
    in_out_helpers.cpp
    read_in_email.cpp
)

target_include_directories(read_email PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(read_email PRIVATE
    CURL::libcurl
)
